aligned to influx_reporter

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
         {exometer_core, {git, "git://github.com/Feuerlabs/exometer_core.git", {branch, "master"}}},
-        {recon, {git, "https://github.com/ferd/recon", {tag, "2.2.1"}}}
+        {recon, {git, "https://github.com/ferd/recon", {tag, "2.2.1"}}},
+        {exometer_influxdb, {git, "https://github.com/travelping/exometer_influxdb.git", {branch, "master"}}}
        ]
 }.
